solve layout bug

--- a/src/App.css
+++ b/src/App.css
@@ -57,6 +57,7 @@
     cursor: pointer;
     background-color:transparent;
     border: none;
+    margin-top: 20px;
 }
 
 .padding {
